# ProofPay

./: .gitignore  LEVEL1_WHITE_BELT_README.md  LEVEL2_YELLOW_BELT_README.md  LEVEL3_ORANGE_BELT_README.md  README.md  eslint.config.js  implementation_plan.md  index.html  package-lock.json  package.json  proofpay-website (1).html
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/payroll-factory/: Cargo.toml
contracts/payroll-factory/src/: lib.rs
contracts/payroll-factory/test_snapshots/tests/: test_factory_deploy_vault.1.json
contracts/payroll-vault/: Cargo.toml
contracts/payroll-vault/src/: lib.rs
contracts/payroll-vault/test_snapshots/tests/: test_deposit_and_claim.1.json  test_get_allocation_starts_zero.1.json  test_get_total_deposited_starts_zero.1.json  test_scheduled_deposit_and_claim.1.json  test_streaming_deposit_and_claim.1.json
src/: App.tsx  main.tsx  styles.css
src/hooks/: useFreighter.ts  useStellarWallet.ts
src/lib/: contractArgs.ts  stellar.ts
src/tests/: utils.test.ts
