[package]
name = "payroll-vault"
version = "0.1.0"
edition = "2021"
description = "ProofPay Payroll Vault — Soroban smart contract for on-chain payroll deposits and claims"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.0.1"

[dev-dependencies]
soroban-sdk = { version = "25.0.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
